infrastructure/kubernetes/mlops-data/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-minio
  namespace: mlops-data
spec:
  selector:
    app: data-minio
  ports:
    - name: api
      port: 9000
      targetPort: api
    - name: console
      port: 9001
      targetPort: console
  type: ClusterIP
